--- a/src/app/profile-details/profile-details.component.html
+++ b/src/app/profile-details/profile-details.component.html
@@ -9,14 +9,22 @@
       <p>{{ profile.Mobile }}</p>
       <ul>
         <li>Address: {{ profile.Address }}</li>
-        <li>boi: {{ profile. boi}}</li>
+        <li>boi: {{ profile. Email}}</li>
+        <li>Address: {{ profile.Address }}</li>
+        <li>Address: {{ profile.Maps }}</li>
+        <li>Address: {{ profile.Gender }}</li>
+        <li>Address: {{ profile.Pan }}</li>
          
-        
+       
         
       </ul>
 
       <button type="button" class="btn btn-primary"(click)="deleteRecord(profile.id)">delete</button>
+      <button type="button" class="btn btn-primary"(click)="edit(profile.id)" >eidt</button>
+    </div>
+    </div>
+    </div>
 
-    </div>
-    </div>
-    </div>
+    <!-- ---------------------------------------------------- -->
+    <!-- Username,Name,Mobile,Pan,Password,Email,Address,Maps,Gender img -->
+   
