--- a/src/app/map-view/map-view.component.html
+++ b/src/app/map-view/map-view.component.html
@@ -1,1 +1,3 @@
-<p>map-view works!</p>
+<!-- <agm-map [latitude]="41.8781" [longitude]="-87.6298" [zoom]="8">
+    <agm-marker [latitude]="41.8781" [longitude]="-87.6298"></agm-marker>
+</agm-map> -->
